# Voxel-Game-Engine

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  index.html  rustfmt.toml
patches/: wgpu-hal+29.0.0.patch
src/: app.rs  camera.rs  collision_audio.rs  debug_draw.rs  entity.rs  grid_tree.rs  lib.rs  main.rs  math.rs  mesh.rs  physics_body_resource.rs  pose.rs  renderer.rs  resource_manager.rs  resources.rs  shader.wgsl  state.rs  voxels.rs
src/audio/: audio_engine.rs  collision_synth.rs  instructions.rs  mixer.rs  mod.rs
src/audio/desktop/: audio_engine.rs
src/audio/web/: audio_engine.rs
src/entity_component_system/: component_storage.rs  entity_component_system.rs  mod.rs
src/gpu_objects/: gpu_bvh.rs  gpu_grid_tree.rs  matrix.rs  mesh.rs  mod.rs  packed_buffer.rs  packed_buffer_texture.rs  packed_dynamic_buffer.rs  packed_mesh_buffer.rs  texture.rs
src/physics/: ball_joint_constraint.rs  bvh.rs  collision.rs  collision_constraint.rs  inertia_tensor.rs  integrator.rs  mod.rs  physics_body.rs  physics_constraint.rs  physics_engine.rs  solver.rs  voxel_tracker.rs
src/player/: camera.rs  mod.rs  object_pickup.rs  orientator.rs  player_input.rs  player_tracker.rs
src/render/: crosshair_renderer.rs  debug_draw_renderer.rs  graphics_settings.rs  mod.rs  renderer.rs  voxel_renderer.rs
src/render/shaders/: beam_bvh_raycast.wgsl  bvh_raycast.wgsl  coloring_shader.wgsl  combined_raycast.wgsl  crosshair.wgsl  dda_raycast.wgsl  debug_render.wgsl  main_shader.wgsl  raycasting_shader.wgsl  voxel_reader.wgsl
src/shaders/: bvh_raycast.wgsl  combined_raycast.wgsl  crosshair.wgsl  dda_raycast.wgsl  main_shader.wgsl  ray_marching.wgsl  shader.wgsl
src/world/: grid.rs  grid_tree.rs  mod.rs  physics_body.rs  physics_body_resource.rs  pose.rs  resource_manager.rs  sparse_set.rs  sub_grid.rs  subgrid.rs  voxel_tracker.rs  voxels.rs  world.rs
src/world/entity_component_system/: component_storage.rs  entity_component_system.rs  message_queue.rs  mod.rs  system.rs
src/world/gpu/: gpu_bvh.rs  gpu_grid_tree.rs  sub_grid_gpu_state.rs  world_gpu_data.rs
src/world/physics_solver/: ball_joint_constraint.rs  bvh.rs  collision.rs  collision_constraint.rs  inertia_tensor.rs  mod.rs  physics_constraint.rs  physics_engine.rs  solver.rs  voxel_tracker.rs
src/world_gen/: mod.rs
