[package]
name = "voxel-game-engine"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
tracy = ["tracy-client/enable"]

[dependencies]
anyhow = "1.0"
image = "0.23"
glam = "0.32.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
itertools = "0.9.0"
dot_vox = "5.2.0"
nalgebra = "0.34.1"
bimap = "0.6.3"
log = "0.4"
pollster = "0.3"
wgpu = "29.0.0"
tobj = { version = "3.2", default-features = false, features = ["async"]}
bytemuck = { version = "1.24", features = [ "derive" ] }
tracy-client = { version = "0.18.4", default-features = false }
noise = "0.9.0"
clone_cell = "0.4.2"
num = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "27.0.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
reqwest = { version = "0.11" }
web-sys = { version = "0.3", features = [
	"Window",
	"Element",
	"Location",
]}
web-time = "0.2"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
