[package]
name = "voxel-game-engine"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
# debug = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
tracy = ["tracy-client/enable"]
gpu_profiling = []

[package.metadata.patch]
crates = ["wgpu-hal"]

[dependencies]
anyhow = "1.0"
image = "0.23"
glam = "0.32.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
itertools = "0.9.0"
dot_vox = "5.2.0"
nalgebra = "0.34.1"
bimap = "0.6.3"
log = "0.4"
pollster = "0.3"
wgpu = "29.0.0"
tobj = { version = "3.2", default-features = false, features = ["async"]}
bytemuck = { version = "1.24", features = [ "derive" ] }
tracy-client = { version = "0.18.4", default-features = false }
noise = "0.9.0"
clone_cell = "0.4.2"
num = "0.4.3"
rtrb = "0.3.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.16", features = ["wasm-bindgen"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "29.0.0", features = ["webgpu"]}
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
reqwest = { version = "0.13.2" }
web-sys = { version = "0.3.91", features = [
	"Window",
	"Element",
	"Location",
]}
web-time = "1.1.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
patch-crate = "0.1"

[patch.crates-io]
wgpu-hal = { path = "./target/patch/wgpu-hal-29.0.0" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
